--- a/notebooks/probability.ipynb
+++ b/notebooks/probability.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -79,9 +79,11 @@
     "from fractions import Fraction\n",
     "\n",
     "def P(event, space): \n",
-    "    \"The probability of an event, given a sample space of equiprobable outcomes.\"\n",
-    "    return Fraction(len(event & space), \n",
-    "                    len(space))"
+    "    \"The probability of an event, given a sample space of equally probably outcomes.\"\n",
+    "    numerator = len(event & space)\n",
+    "    denominator = len(space)\n",
+    "\n",
+    "    return Fraction(numerator, denominator)"
    ]
   },
   {
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -136,14 +138,14 @@
        "Fraction(1, 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "D    = {1, 2, 3, 4, 5, 6}\n",
-    "even = {   2,    4,    6}\n",
+    "D = {1, 2, 3, 4, 5, 6}\n",
+    "even = {2, 4, 6}\n",
     "\n",
     "P(even, D)"
    ]
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -183,7 +185,7 @@
        "Fraction(1, 2)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -290,7 +292,7 @@
        " 'W8'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,8 +300,7 @@
    "source": [
     "def cross(A, B):\n",
     "    \"The set of ways of concatenating one item from collection A with one from B.\"\n",
-    "    return {a + b \n",
-    "            for a in A for b in B}\n",
+    "    return {a + b for a in A for b in B}\n",
     "\n",
     "urn = cross('W', '12345678') | cross('B', '123456') | cross('R', '123456789') \n",
     "\n",
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -325,7 +326,7 @@
        "23"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -367,7 +368,7 @@
        "100947"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,8 +378,7 @@
     "\n",
     "def combos(items, n):\n",
     "    \"All combinations of n items; each combo as a concatenated str.\"\n",
-    "    return {' '.join(combo) \n",
-    "            for combo in itertools.combinations(items, n)}\n",
+    "    return {' '.join(combo) for combo in itertools.combinations(items, n)}\n",
     "\n",
     "U6 = combos(urn, 6)\n",
     "\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -415,19 +415,19 @@
     {
      "data": {
       "text/plain": [
-       "['R9 R6 B3 W3 B1 W6',\n",
-       " 'B2 R6 B6 W3 B1 R4',\n",
-       " 'W5 W1 B1 B5 W2 R4',\n",
-       " 'R9 R8 B3 R1 W6 B4',\n",
-       " 'B2 W8 R9 R8 B3 R5',\n",
-       " 'B2 W8 R9 W1 R1 W3',\n",
-       " 'W5 R6 R1 B1 W7 W2',\n",
-       " 'W8 R2 R1 W3 B1 R5',\n",
-       " 'W5 R3 W1 B6 R8 R7',\n",
-       " 'W5 R3 R6 R1 W3 R4']"
+       "['R3 B5 W7 B6 W2 B4',\n",
+       " 'R7 R8 R5 B5 W7 W2',\n",
+       " 'R7 B1 B2 R5 W7 R2',\n",
+       " 'R9 B3 W5 B5 W3 B4',\n",
+       " 'W4 B3 W8 B5 B6 W2',\n",
+       " 'W6 B2 R8 R2 W3 B4',\n",
+       " 'W4 R9 B1 R5 W8 W1',\n",
+       " 'R5 W8 W1 W7 W3 B4',\n",
+       " 'R7 R1 R6 R8 R3 B6',\n",
+       " 'W6 W5 W8 W7 B6 R2']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {
     "button": false,
     "collapsed": true,
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -500,7 +500,7 @@
        "100947"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -544,7 +544,7 @@
        "Fraction(4, 4807)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -588,7 +588,7 @@
        "84"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -630,7 +630,7 @@
        "84"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -672,14 +672,13 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "P(red6, U6) == Fraction(choose(9, 6), \n",
-    "                        len(U6))"
+    "P(red6, U6) == Fraction(choose(9, 6), len(U6))"
    ]
   },
   {
@@ -698,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -715,7 +714,7 @@
        "Fraction(240, 4807)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -760,7 +759,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -805,7 +804,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -850,7 +849,7 @@
        "Fraction(350, 4807)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -881,7 +880,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -910,7 +909,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {
     "button": false,
     "collapsed": true,
@@ -974,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {
     "button": false,
     "collapsed": true,
@@ -1016,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1033,7 +1032,7 @@
        "{2, 4, 6}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1061,7 +1060,7 @@
        "Fraction(1, 2)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1089,7 +1088,7 @@
        "{2, 4, 6, 8, 10, 12}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1119,7 +1118,7 @@
        "Fraction(1, 2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1163,7 +1162,7 @@
        "Fraction(73, 216)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1213,7 +1212,7 @@
        "52"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1226,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2C',\n",
+       " '2D',\n",
+       " '2H',\n",
+       " '2S',\n",
+       " '3C',\n",
+       " '3D',\n",
+       " '3H',\n",
+       " '3S',\n",
+       " '4C',\n",
+       " '4D',\n",
+       " '4H',\n",
+       " '4S',\n",
+       " '5C',\n",
+       " '5D',\n",
+       " '5H',\n",
+       " '5S',\n",
+       " '6C',\n",
+       " '6D',\n",
+       " '6H',\n",
+       " '6S',\n",
+       " '7C',\n",
+       " '7D',\n",
+       " '7H',\n",
+       " '7S',\n",
+       " '8C',\n",
+       " '8D',\n",
+       " '8H',\n",
+       " '8S',\n",
+       " '9C',\n",
+       " '9D',\n",
+       " '9H',\n",
+       " '9S',\n",
+       " 'AC',\n",
+       " 'AD',\n",
+       " 'AH',\n",
+       " 'AS',\n",
+       " 'JC',\n",
+       " 'JD',\n",
+       " 'JH',\n",
+       " 'JS',\n",
+       " 'KC',\n",
+       " 'KD',\n",
+       " 'KH',\n",
+       " 'KS',\n",
+       " 'QC',\n",
+       " 'QD',\n",
+       " 'QH',\n",
+       " 'QS',\n",
+       " 'TC',\n",
+       " 'TD',\n",
+       " 'TH',\n",
+       " 'TS'}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1241,14 +1313,14 @@
     {
      "data": {
       "text/plain": [
-       "['3H 6H KC 5H KD',\n",
-       " 'QH 5H KD JH 2D',\n",
-       " '8C JD 6S TH 2C',\n",
-       " '5D 8D 9H JC QS',\n",
-       " 'KS 6D KD TH 2D']"
+       "['5C QH TS AC 5D',\n",
+       " '2S 6C 3H AC 4C',\n",
+       " 'TH 2D QH 3D AC',\n",
+       " '5S AD 4H 3S 6S',\n",
+       " 'TD 2D QD 5D 9D']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,6 +1331,28 @@
     "assert len(Hands) == choose(52, 5)\n",
     "\n",
     "random.sample(Hands, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2598960"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Hands)"
    ]
   },
   {
@@ -1277,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1294,7 +1388,7 @@
        "Fraction(33, 16660)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {
     "button": false,
     "collapsed": false,
@@ -1339,7 +1433,7 @@
        "Fraction(1, 4165)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,6 +1443,89 @@
     "    return any(hand.count(rank) == 4 for rank in ranks)\n",
     "\n",
     "P(four_kind, Hands)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`such_that` can take a while to apply a predicate to large collections. Will parallelizing that work with multiple processes help?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.317726016000961"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import partial\n",
+    "import timeit\n",
+    "\n",
+    "s = partial(such_that, even, range(len(Hands)))\n",
+    "\n",
+    "min(timeit.repeat(s, number=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "\n",
+    "def such_that_parallel(predicate, collection, c=10): \n",
+    "    \"The subset of elements in the collection for which the predicate is true.\"\n",
+    "    with ProcessPoolExecutor() as executor:\n",
+    "        futures = executor.map(predicate, collection, chunksize=c)\n",
+    "    \n",
+    "    return {e for e, qualifies in zip(collection, futures) if qualifies}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.55939392199798"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp = partial(such_that_parallel, even, range(len(Hands)), c=100000)\n",
+    "\n",
+    "min(timeit.repeat(sp, number=10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verdict: not really, looks like it introduces too much overhead."
    ]
   },
   {
